--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "jest.config.js",
-    "jest.setup.js"
-  ],
+    "jest.setup.js", 
+    "tailwind.config.ts"  ],
   "types": ["node", "jest", "@testing-library/jest-dom"],
   "exclude": ["node_modules"]
 }
